@@ -126,6 +126,7 @@ if (isset($message)) {
 		'wildcard'		=> null,
 		'season'		=> null,
 		'season_c'		=> null,
+		'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
 		'cookieconsent'	=> $cookieconsent,
 	));
 	exit();
