@@ -152,6 +152,7 @@ Version 0.0.4b (in progress)
 * [Improved] Completed seasons now show rank change relative to the previous season.
 * [Added] Help entry for "Rank".
 * [Fixed] Typo.
+* [Fixed] New user creation from the teams edit menu in the ACP.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
